solve bug of score updation and footer alignment

--- a/src/index.css
+++ b/src/index.css
@@ -214,7 +214,7 @@ admin creation form */
 
 
 .footer {
-  margin-top: 20vh;
+  margin-top: 50vh;
   background-color: black;
   color: #fff;
   padding: 100px 0;
